Changed class instantiation to avoid Java 9 deprecated API warning